# claudecode-utils

./: .branchingstrategy  .gitignore  BRANCHING_STRATEGY.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TESTING.md  bug_triage_report.md  cc_review_report.md  interactive_mode_feature_docs.md  post.md  pr_report.md  pyproject.toml  review_report.json  review_report.md  standup_2025-05-14.md  standup_2025-05-16.md  test_linting.py  test_output.txt
.claude/: settings.local.json
.claude/commands/: context-prime.md  m-pr-dev-new-b-arg.md
.github/: CODEOWNERS  README.md
.github/workflows/: changelog-version-bump.yml
PRPs/: PRP-001-prompt-consistency.md  agentic_loop_plan.md  automated_bug_triaging.md  dylan_dev_cli.md  dylan_fix_pr_cli.md  dylan_prp_command.md  dylan_release_branching_strategy.md
ai_docs/: ant_github_action.md  cc_best_practices.md  graceful_claude_code_termination.md
concept_library/: README.md  concept_analysis.md  innovative_concepts.md  potential_concepts.md
concept_library/automated_bug_triage/: README.md  __init__.py  bug_triage_claude_poc.py  bug_triage_poc.py
concept_library/automated_bug_triage/tests/: __init__.py  test_bug_triage.py  test_bug_triage_claude.py
concept_library/cc_PRP_flow/: README.md
concept_library/cc_PRP_flow/PRPs/: test.md
concept_library/cc_PRP_flow/scripts/: cc_runner_simple.py  cc_setup_tools.py
concept_library/commit_hooks/: README.md  __init__.py  install.sh  prepare_commit_msg.py  test_hook.py
concept_library/commit_hooks/post_push/: README.md  post_push_install.sh  post_push_pr_creator.py
concept_library/commit_hooks/pre_commit/: pre_commit_install.sh  pre_commit_ruff.py
concept_library/commit_hooks/pre_push/: pre_push_install.sh  pre_push_test.py  pre_push_version_bump.py
concept_library/commit_hooks/prepare_commit_msg/: prepare_commit_msg.py  prepare_commit_msg_install.sh  prepare_commit_msg_test.py
concept_library/full_review_loop/: full_review_loop_poc.py  full_review_loop_safe.py  unsafe_simple_loop.py
concept_library/full_review_loop/tests/: test_file_selection_helper.py  test_git_operations.py  test_review_selection.py  test_workflow_sequence.py
concept_library/simple_dev/: simple_dev_poc.py
concept_library/simple_pr/: simple_pr_poc.py
concept_library/simple_review/: simple_review.py  simple_review_poc.py  test_simple_review.py
concept_library/simple_validator/: README.md  simple_validator_poc.py
dylan/: CLI_README.md  __init__.py  __main__.py  cli.py  conftest.py  main.py
dylan/tests/: test_cli.py
dylan/utility_library/: __init__.py
dylan/utility_library/dylan_dev/: README.md  __init__.py  dylan_dev_cli.py  dylan_dev_runner.py
dylan/utility_library/dylan_pr/: README.md  __init__.py  dylan_pr_cli.py  dylan_pr_runner.py
dylan/utility_library/dylan_pr/tests/: conftest.py
dylan/utility_library/dylan_release/: README.md  __init__.py  dylan_release_cli.py  dylan_release_runner.py
dylan/utility_library/dylan_review/: README.md  __init__.py  dylan_review_cli.py  dylan_review_runner.py
dylan/utility_library/dylan_review/tests/: conftest.py
dylan/utility_library/dylan_standup/: README.md  standup_typer.py
dylan/utility_library/provider_clis/: __init__.py  provider_claude_code.py  test_provider.py
dylan/utility_library/provider_clis/shared/: __init__.py  subprocess_utils.py
dylan/utility_library/provider_clis/tests/: __init__.py  test_provider_claude_code.py
dylan/utility_library/shared/: __init__.py  config.py  error_handling.py  exit_command.py  progress.py  ui_theme.py
dylan/utility_library/shared/interactive/: __init__.py  utils.py
dylan/utility_library/shared/tests/: test_exit_command.py  test_subprocess_utils.py
scripts/: clean_build_artifacts.sh
src/: CLI_README.md  __init__.py  __main__.py  cli.py
src/utility_library/cc_review/: README.md  __init__.py  cc_review_cli.py  cc_review_runner.py  cc_review_utils.py
src/utility_library/cc_review/tests/: test_helpers.py
src/utility_library/cc_standup/: README.md  activity.py  provider.py  report.py  standup_cli.py  standup_typer.py
src/utility_library/dylan_review/: README.md  dylan_review_cli.py  dylan_review_runner.py
src/utility_library/dylan_standup/: README.md  activity.py
src/utility_library/provider_clis/: test_provider.py
