[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claudecode-utility-library"
version = "1.1.2"
description = "A utility package for Claude code generation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Rasmus Widing", email = "rasmus.widing@gmail.com"}
]

dependencies = [
    "requests>=2.32.3",
    "filelock>=3.12.2",
    "typer>=0.15.3",
    "rich>=14.0.0",
    "gitpython>=3.1.44",
    "pygithub>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}

[project.scripts]   
claudecode = "src.cli:app"
# Standalone entry points (optional - can be removed if not needed)
cc-review = "src.utility_library.cc_review.cc_review_cli:main"
standup = "src.utility_library.cc_standup.standup_cli:main"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true